<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#000000">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/me"
            android:layout_marginTop="70dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="50dp"
            android:text="@string/amit_hasan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:text="@string/developer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="25dp"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="@string/description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textSize="15sp"
            android:textColor="#25A092"
            android:text="@string/give_feedback"/>

        <ImageView
            android:id="@+id/mainImageViewMail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/mail"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/aboutTextViewAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/app_name_sample"/>

            <TextView
                android:id="@+id/aboutTextViewAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="#ffffff"
                android:text="@string/version_sample"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
